fixed as per comments
